# lesymap-python

./: .gitattributes  .gitignore  CLAUDE.md  MULTIVARIATE_R_COMPATIBILITY_REPORT.md  MULTIVARIATE_R_COMPATIBILITY_REPORT.pre-merge.md  README.md  SCCAN原理详解.md  VALIDATION_SUMMARY.md  pyproject.toml  setup.py
benchmarks/: run_benchmarks.py
examples/: basic_example.py  register_lesions.py
lesymap/: __init__.py
lesymap-python/: .gitignore  CODE_REVIEW_FIXES.md  IMPLEMENTATION.md  README.md  pyproject.toml
lesymap-python/examples/: __init__.py
lesymap-python/lesymap/core/: __init__.py  (+3 more)
lesymap-python/tests/: __init__.py  generate_r_svr_reference.R  test_optimizations2.py  test_stats.py  test_svr_r_comparison.py
lesymap/core/: __init__.py  image_utils.py  io.py  patch.py  pipeline.py  registration.py  result.py
lesymap/methods/: __init__.py  multivariate.py  univariate.py
lesymap/stats_compiled/: __init__.py  bm.py  regression.py  ttest.py
lesymap/utils/: __init__.py  metrics.py  validation.py
tests/: generate_r_chisq_reference.R  generate_r_patch_reference.R  generate_r_reference.R  generate_r_regression_reference.R  generate_r_sccan_cv_tiny_reference.R  generate_r_sccan_reference.R  generate_r_svr_reference.R  generate_r_svr_tiny_reference.R  generate_r_ttest_reference.R  test_benchmark_runner.py  test_binary_prediction_metrics.py  test_bmfast_r_comparison.py  test_chisq_r_comparison.py  test_multivariate_perf_controls.py  test_optimizations.py  test_patch_correctness.py  test_patch_r_comparison.py  test_prediction_roundtrip.py  test_regression_r_comparison.py  test_sccan_r_comparison.py  test_svr_r_comparison.py  test_svr_r_compatible.py  test_testdata_io_performance.py  test_testdata_prediction_e2e.py  test_ttest_r_comparison.py
(+56 files in other folders)
