[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "lesymap"
dynamic = ["version"]
description = "Lesion-Symptom Mapping for Neuroimaging Research"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "LESYMAP Python Contributors"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]
dependencies = [
    "numpy>=1.21",
    "nibabel>=5.0",
    "scipy>=1.9",
    "statsmodels>=0.13",
    "numba>=0.56",
    "pandas>=1.4",
    "scikit-learn>=1.0",
    "joblib>=1.2",
    "tqdm>=4.64",
]

[project.optional-dependencies]
sccan = [
    # ANTsPy for SCCAN method
    # For conda: conda install -c conda-forge antspy
    # For pip: pip install antspyx (recommended)
    "antspyx>=0.3.6",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=3.0",
    "black>=22.0",
    "ruff>=0.0.200",
    "mypy>=0.950",
]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']

[tool.ruff]
line-length = 100
select = ["E", "F", "W", "I", "N", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-m 'not slow'"
markers = [
    "slow: tests that are too expensive for the default local/CI suite",
]
